<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/degradado"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginBottom="5dp"
            android:textColor="@color/golden"
            android:textSize="25dp"
            android:fontFamily="@font/neuemachinaultrabold"
            android:text="@string/managettl" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/golden"
            android:textSize="20dp"
            android:fontFamily="@font/neuemachinaregular"
            android:text="@string/mensualprofitttl"/>

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_gravity="center"
            android:paddingTop="20dp"
            android:background="@color/darkgray"
            android:fontFamily="@font/neuemachinaultrabold"
            android:text="@string/mensualprofit"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/neuemachinaregular"
            android:text="@string/dailyprofitttl"
            android:textAlignment="center"
            android:textColor="@color/golden"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:background="@color/darkgray"
            android:fontFamily="@font/neuemachinaultrabold"
            android:paddingTop="20dp"
            android:text="@string/dailyprofit"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/neuemachinaregular"
            android:text="@string/benefitcost"
            android:textAlignment="center"
            android:textColor="@color/golden"
            android:textSize="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:background="@color/darkgray"
            >

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:fontFamily="@font/neuemachinaregular"
                android:text="@string/benefit"
                android:textAlignment="center"
                android:textColor="@color/green"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:fontFamily="@font/neuemachinaregular"
                android:text="@string/cost"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:textSize="20dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/neuemachinaregular"
            android:text="@string/productquant"
            android:textAlignment="center"
            android:textColor="@color/golden"
            android:textSize="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:background="@color/darkgray"
            >

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:fontFamily="@font/neuemachinaregular"
                android:text="@string/highquant"
                android:textAlignment="center"
                android:textColor="@color/green"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:fontFamily="@font/neuemachinaregular"
                android:text="@string/lowquant"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:textSize="20dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/neuemachinaregular"
            android:text="@string/lastbuyttl"
            android:textAlignment="center"
            android:textColor="@color/golden"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingTop="10dp"
            android:background="@color/darkgray"
            android:fontFamily="@font/neuemachinaregular"
            android:text="@string/lastbuy"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/neuemachinaregular"
            android:text="@string/lastsalettl"
            android:textAlignment="center"
            android:textColor="@color/golden"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@color/darkgray"
            android:fontFamily="@font/neuemachinaregular"
            android:text="@string/lastsale"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="290dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="90dp"
            android:background="@color/golden"
            android:orientation="horizontal">

            <View
                android:id="@+id/view2"
                android:layout_width="59dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@drawable/repdf" />

            <Button
                android:id="@+id/succesfulButton"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/golden"
                android:fontFamily="@font/neuemachinaultrabold"
                android:text="@string/reportpdf"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="38dp"
            android:layout_gravity="end"
            android:background="@color/gray"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/metrics1" />

            <ImageButton
                android:id="@+id/imageButton8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/gestion2" />

            <ImageButton
                android:id="@+id/imageButton9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/home1" />

            <ImageButton
                android:id="@+id/imageButton10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/stock1" />

            <ImageButton
                android:id="@+id/imageButton11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/config1" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>