<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        android:background="@drawable/degradado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button5"
                android:layout_width="148dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:backgroundTint="@color/golden"
                android:fontFamily="@font/neuemachinaultrabold"
                android:text="@string/invproduct"
                android:textSize="20dp"
                android:layout_marginRight="10dp"/>

            <Button
                android:id="@+id/button6"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/golden"
                android:fontFamily="@font/neuemachinaultrabold"
                android:text="@string/invmove"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="14dp"
            android:orientation="horizontal"></LinearLayout>


        <EditText
            android:id="@+id/editTextText8"
            android:layout_width="326dp"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/white"
            android:ems="10"
            android:fontFamily="@font/neuemachinalight"
            android:inputType="text"
            android:text="@string/invcode"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button8"
                android:layout_width="148dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/golden"
                android:fontFamily="@font/neuemachinaultrabold"
                android:text="@string/invgenerbuy"
                android:textSize="20dp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/golden"
                android:fontFamily="@font/neuemachinaultrabold"
                android:text="@string/invgenersell"
                android:textSize="20dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/Text9"
            android:layout_width="326dp"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/white"
            android:text="@string/invname"
            android:textAlignment="center"
            android:fontFamily="@font/neuemachinalight"
            android:textColor="@color/gray"
            android:textSize="30dp"/>

        <TextView
            android:id="@+id/Text10"
            android:layout_width="326dp"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/white"
            android:text="@string/invcost"
            android:textAlignment="center"
            android:fontFamily="@font/neuemachinalight"
            android:textColor="@color/gray"
            android:textSize="30dp"/>

        <EditText
            android:id="@+id/UnitText"
            android:layout_width="326dp"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/white"
            android:ems="10"
            android:fontFamily="@font/neuemachinalight"
            android:inputType="text"
            android:text="@string/invunit"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button10"
                android:layout_width="148dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/golden"
                android:fontFamily="@font/neuemachinaultrabold"
                android:text="@string/invbuy"
                android:textSize="20dp" />

            <Button
                android:id="@+id/button11"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/golden"
                android:fontFamily="@font/neuemachinaultrabold"
                android:text="@string/invsell"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="end"
            android:background="@color/gray"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/metrics1" />

            <ImageButton
                android:id="@+id/imageButton8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/gestion1" />

            <ImageButton
                android:id="@+id/imageButton9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/home1" />

            <ImageButton
                android:id="@+id/imageButton10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/stock2" />

            <ImageButton
                android:id="@+id/imageButton11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/config1" />
        </LinearLayout>

        <EditText
            android:id="@+id/editTextText7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="Name" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>