<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="#000000"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="255dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/logo">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/neuemachinaregular"
            android:text="@string/user_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/plaintextone"
            android:ems="10"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/neuemachinaregular"
            android:text="CONTRASEÑA"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/plaintextone"
            android:ems="10"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="200dp"
            android:layout_height="59dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/golden"
            android:fontFamily="@font/neuemachinaultrabold"
            android:text="@string/startbutton"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:allowUndo="false"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/neuemachinaregular"
            android:text="@string/gotoreg"
            android:textColor="@color/blue"
            android:textSize="20dp" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>